fix: adjust portfolio spacing, align titles and cleanup features gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,8 +185,6 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   display: flex;
-  gap: 24px calc(100%-72px) / 4;
-  display: flex;
   gap: 24px;
 }
 .visually-hidden {
@@ -265,6 +263,7 @@ p {
   line-height: 1.11111;
   letter-spacing: 0.02em;
   text-align: center;
+  margin-bottom: 72px;
 }
 .portfolio-list {
   font-weight: 400;
@@ -279,8 +278,8 @@ p {
   row-gap: 48px;
 }
 .portfolio-title {
-  margin-bottom: 72px;
-  text-align: center;
+  margin-bottom: 8px;
+  text-align: left;
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
